benswork/UARProject/force-app/main/default/objects/App_User__c/App_User__c.object-meta.xml
<CustomObject>
    <description>Used to determine the user who requested access to the app and the role associated to the request</description>
    <label>App User</label>
    <nameField>
        <displayFormat>U-{0}</displayFormat>
        <label>App User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>