benswork/UARProject/force-app/main/default/objects/App_User__c/fields/App__c.field-meta.xml
<CustomField>
    <fullName>App__c</fullName>
    <label>App</label>
    <referenceTo>Apps__c</referenceTo>
    <relationshipLabel>App Users</relationshipLabel>
    <relationshipName>App_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>