benswork/UARProject/force-app/main/default/objects/App_User__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>App_Role__c</referenceTo>
    <relationshipLabel>App Users</relationshipLabel>
    <relationshipName>App_Users</relationshipName>
    <type>Lookup</type>
</CustomField>