benswork/UARProject/force-app/main/default/objects/App_User__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person Account of the User</description>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a person account!</errorMessage>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>App Users</relationshipLabel>
    <relationshipName>App_Users</relationshipName>
    <type>Lookup</type>
</CustomField>